feat: external CRUD
